about_us, times eisitiria/kartes

--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -80,9 +80,7 @@
             <div ngbDropdownMenu class="dropdown-menu">
               <a class="dropdown-item" href="plhrofories/odikes">Γραμμές οδικών συγκοινωνιών (λεωφορεία)</a>
               <a class="dropdown-item" href="plhrofories/sta8eres">Γραμμές σταθερών συγκοινωνιών (μετρό)</a>
-              <a class="dropdown-item" href="nuxterina">Ωράριο λειτοθργίας Νυχτερινών - 24ωρων μέσων</a>
-              <a class="dropdown-item" href="">Πληροφόρηση σε πραγματικό χρόνο</a>
-              <a class="dropdown-item" href="">Σταθμοί μετεπιβίβασης</a>
+              <a class="dropdown-item" href="nuxterina">Ωράριο λειτουργίας Νυχτερινών - 24ωρων μέσων</a>
             </div>
           </div>
 
@@ -105,8 +103,8 @@
             <div ngbDropdownMenu class="dropdown-menu">
               <a class="dropdown-item" href="shmeia-ekdosis/odikes">Σημεία έκδοσης στις Οδικές</a>
               <a class="dropdown-item" href="shmeia-ekdosis/sta8eres">Σημεία έκδοσης στις Σταθερές</a>
-              <a class="dropdown-item" href="">Τιμές εισιτηρίων</a>
-              <a class="dropdown-item" href="">Τιμές χρονικών προϊόντων</a>
+              <a class="dropdown-item" href="times/eisitiria">Τιμές εισιτηρίων</a>
+              <a class="dropdown-item" href="times/kartes">Τιμές χρονικών προϊόντων</a>
               <a class="dropdown-item" href="agora">Αγορα Εισιτηρίων </a>
             </div>
           </div>
@@ -118,7 +116,7 @@
             <div ngbDropdownMenu class="dropdown-menu">
               <a class="dropdown-item" href="">eng.Γραμμές οδικών συγκοινωνιών(λεωφορεία)</a>
               <a class="dropdown-item" href="">eng.Γραμμές σταθερών συγκοινωνιών(μετρό)</a>
-              <a class="dropdown-item" href="">eng.Ωράριο λειτοθργίας Νυχτερινών - 24ώρων μέσων</a>
+              <a class="dropdown-item" href="">eng.Ωράριο λειτουργίας Νυχτερινών - 24ώρων μέσων</a>
               <a class="dropdown-item" href="">eng.Πληροφόρηση σε πραγματικό χρόνο</a>
               <a class="dropdown-item" href="">eng.Σταθμοί μετεπιβίβασης</a>
               <a class="dropdown-item" href="agora">Buy tickets</a>
@@ -133,7 +131,6 @@
             </button>
             <div ngbDropdownMenu class="dropdown-menu">
               <a class="dropdown-item" href="plhrofories/odikes/amea">Εύρεση στάσεων με ράμπα</a>
-              <a class="dropdown-item" href="">Γενικές πληροφορίες ΑμεΑ</a>
             </div>
           </div>
 
@@ -154,7 +151,7 @@
               Επικοινωνία
             </button>
             <div ngbDropdownMenu class="dropdown-menu">
-              <a class="dropdown-item" href="">Επικοινωνία με φορείς</a>
+              <!-- <a class="dropdown-item" href="">Επικοινωνία με φορείς</a> -->
               <a class="dropdown-item" href="parapona">Παράπονα</a>
             </div>
           </div>
@@ -166,7 +163,7 @@
             <div ngbDropdownMenu class="dropdown-menu">
               <a class="dropdown-item" href="">Γραμμές οδικών συγκοινωνιών(λεωφορεία)</a>
               <a class="dropdown-item" href="">Γραμμές σταθερών συγκοινωνιών(μετρό)</a>
-              <a class="dropdown-item" href="">Ωράριο λειτοθργίας Νυχτερινών - 24ώρων μέσων</a>
+              <a class="dropdown-item" href="">Ωράριο λειτουργίας Νυχτερινών - 24ώρων μέσων</a>
               <a class="dropdown-item" href="">Πληροφόρηση σε πραγματικό χρόνο</a>
               <a class="dropdown-item" href="">Σταθμοί μετεπιβίβασης</a>
             </div>
@@ -179,9 +176,7 @@
               Σχετικά με Εμάς
             </button>
             <div ngbDropdownMenu class="dropdown-menu">
-              <a class="dropdown-item" href="">Πόσο χάλια σελίδα έχει ο ΟΑΣΑ</a>
-              <a class="dropdown-item" href="">ώστε να πρέπει να την φτιάξω από</a>
-              <a class="dropdown-item" href="">την αρχή μπας και πάρω πτυχίο<img src="/assets/heart.svg" width="22" height="22"></a>
+              <a class="dropdown-item" href="about_us">Πληροφορίες</a>
             </div>
           </div>
 
@@ -190,11 +185,7 @@
               About us
             </button>
             <div ngbDropdownMenu class="dropdown-menu">
-              <a class="dropdown-item" href="">Γραμμές οδικών συγκοινωνιών(λεωφορεία)</a>
-              <a class="dropdown-item" href="">Γραμμές σταθερών συγκοινωνιών(μετρό)</a>
-              <a class="dropdown-item" href="">Ωράριο λειτοθργίας Νυχτερινών - 24ώρων μέσων</a>
-              <a class="dropdown-item" href="">Πληροφόρηση σε πραγματικό χρόνο</a>
-              <a class="dropdown-item" href="">Σταθμοί μετεπιβίβασης</a>
+              <a class="dropdown-item" href="">Information</a>
             </div>
           </div>
       
